Fix manifest for portprober enablement
Related-Prod: PRODX-3456
Change-Id: I6ed1c3de41fb67e1d33ab71b032c30e938cc72e5

--- a/openstack_controller/templates/services/networking.yaml
+++ b/openstack_controller/templates/services/networking.yaml
@@ -746,7 +746,7 @@ spec:
       {%- endif %}
         network_policy: {{ spec.features.network_policies.enabled }}
       {%- if portprober.enabled %}
-        daemonset_portprober: true
+        daemonset_portprober_agent: true
       {%- endif %}
       network:
         server:
