--- a/tests/fixtures/network_policies/output/identity.yaml
+++ b/tests/fixtures/network_policies/output/identity.yaml
@@ -484,6 +484,10 @@ identity:keystone:Deployment:keystone-api:
   - podSelector:
       matchLabels:
         application: neutron
+        component: neutron-portprober-agent
+  - podSelector:
+      matchLabels:
+        application: neutron
         component: server
   - podSelector:
       matchLabels:
