--- a/tests/fixtures/network_policies/output/networking.yaml
+++ b/tests/fixtures/network_policies/output/networking.yaml
@@ -148,6 +148,10 @@ networking:rabbitmq:StatefulSet:openstack-neutron-rabbitmq-rabbitmq:
   - podSelector:
       matchLabels:
         application: neutron
+        component: neutron-portprober-agent
+  - podSelector:
+      matchLabels:
+        application: neutron
         component: server
   - podSelector:
       matchLabels:
