--- a/openstack_controller/templates/child_objects/networking.yaml
+++ b/openstack_controller/templates/child_objects/networking.yaml
@@ -171,6 +171,21 @@ neutron:
         application: neutron
         component: neutron-sriov-agent
       type: dynamic
+    neutron-portprober-agent:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("networking", "rabbitmq", "StatefulSet", "openstack-neutron-rabbitmq-rabbitmq", ["amqp"]) | indent(12)}}
+          - {{ to_child_object("messaging", "rabbitmq", "StatefulSet", "openstack-rabbitmq-rabbitmq", ["amqp"]) | indent(12)}}
+          - {{ to_child_object("memcached", "memcached", "StatefulSet", "openstack-memcached-memcached", ["memcached"]) | indent(12)}}
+      hash_fields: []
+      images:
+      - neutron_portprober_agent
+      manifest: daemonset_portprober_agent
+      pod_labels:
+        application: neutron
+        component: neutron-portprober-agent
+      type: dynamic
     {%- if spec.get("features", {}).get("neutron", {}).get("backend") != "ml2/ovn" %}
   Deployment:
     neutron-server:
