--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -258,6 +258,7 @@ spec:
             # NOTE(vsaienko): always specify rbd_secret_uuid as since Antelope this is set
             # by default on cinder cide. Should be matched with values in nova/cinder keyrings
             rbd_secret_uuid: c9543a17-411c-45e1-8a25-3f03e0090dc2
+            report_dynamic_total_capacity: false
           # Needed for InstanceLocalityFilter
           nova:
             auth_section: keystone_authtoken
