--- a/tests/fixtures/render_service_template/output/block-storage/yoga_lvm_lvm_non_dvr_backup_nfs.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/yoga_lvm_lvm_non_dvr_backup_nfs.yaml
@@ -79,6 +79,7 @@ spec:
           backend_defaults:
             rbd_exclusive_cinder_pool: true
             rbd_secret_uuid: c9543a17-411c-45e1-8a25-3f03e0090dc2
+            report_dynamic_total_capacity: false
           nova:
             auth_section: keystone_authtoken
             auth_type: password
