Add network policy rules for portprober exporter
Related-Prod: PRODX-40253
Change-Id: Ib32f5da655f76f72f94a27ba95d3460cc761541a

--- a/openstack_controller/templates/child_objects/networking.yaml
+++ b/openstack_controller/templates/child_objects/networking.yaml
@@ -185,6 +185,10 @@ neutron:
       pod_labels:
         application: neutron
         component: neutron-portprober-agent
+      ports:
+        - port: 8000
+          name: qpp-exporter
+          protocol: TCP
       type: dynamic
     {%- if spec.get("features", {}).get("neutron", {}).get("backend") != "ml2/ovn" %}
   Deployment:
