--- a/openstack_controller/templates/antelope/artifacts.yaml
+++ b/openstack_controller/templates/antelope/artifacts.yaml
@@ -218,6 +218,7 @@ ironic_update_nodes_metadata: '{{ images_base_url }}/openstack/openstack-tools:y
 ironic_pxe_http: '{{ images_base_url }}/openstack/extra/nginx:1.25.3-20240131112557'
 ingress_tls_proxy: '{{ images_base_url }}/openstack/tls-proxy:focal-fipster-20230725114156'
 cirros_checksum: f4027b89e99e238184e13089a3155b74
+cirros_raw_checksum: f756328a32fad36f7239223b030caab5
 fedora_checksum: e0713a4f26427691da90701ff7a823da
 ubuntu_checksum: 30d459e0dc0562e629d3683970e55efa
 manila_service_image: '{{ binary_base_url }}/openstack/bin/manila/manila-service-image-20221228132450.qcow2'
