--- a/openstack_controller/templates/queens/artifacts.yaml
+++ b/openstack_controller/templates/queens/artifacts.yaml
@@ -209,6 +209,7 @@ ironic_update_nodes_metadata: '{{ images_base_url }}/openstack/openstack-tools:y
 ironic_pxe_http: '{{ images_base_url }}/openstack/extra/nginx:1.25.3-20240131112557'
 ingress_tls_proxy: '{{ images_base_url }}/openstack/tls-proxy:focal-fipster-20230725114156'
 cirros_checksum: 1d3062cd89af34e419f7100277f38b2b
+cirros_raw_checksum: 01e7d1515ee776be3228673441d449e6
 fedora_checksum: e0713a4f26427691da90701ff7a823da
 ubuntu_checksum: 30d459e0dc0562e629d3683970e55efa
 manila_service_image: '{{ binary_base_url }}/openstack/bin/manila/manila-service-image-20221228132450.qcow2'
