--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -213,6 +213,7 @@ images:
   openvswitch_ovn_db: openvswitch-ovn-db:latest
   openvswitch_ovn_controller: openvswitch-ovn-controller:latest
   cirros_checksum: 050056e630cf
+  cirros_raw_checksum: 479256d697ca
   fedora_checksum: 8bc56d70a3e2
   ubuntu_checksum: 3fb7422b5843
 proxy_vars:
