--- a/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr.yaml
@@ -30,6 +30,17 @@ spec:
               properties:
                 os_distro: cirros
               source_url: https://artifactory.mcp.mirantis.net/binary-dev-kaas-local/openstack/bin/cirros/0.5.1/
+            cirros-5.1.raw:
+              checksum: 479256d697ca
+              container_format: bare
+              image_file: cirros-0.5.1-x86_64-disk.raw
+              image_type: raw
+              min_disk: 1
+              name: Cirros-5.1.raw
+              private: false
+              properties:
+                os_distro: cirros
+              source_url: https://artifactory.mcp.mirantis.net/binary-dev-kaas-local/openstack/bin/cirros/0.5.1/
             fedora:
               checksum: 8bc56d70a3e2
               container_format: bare
