Add pass_hwveb_ports_to_os_vif_plugin option to compute template
Related-PROD: PRODX-35015
Change-Id: If4c7a91a70064c070c216adcd5d0ab9493c0b36b

--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -869,6 +869,9 @@ spec:
             live_migration_wait_for_vif_plug: false
           workarounds:
             skip_migration_revert_events: true
+{%- if spec.openstack_version not in ("queens", "rocky", "stein", "train", "ussuri", "victoria", "wallaby", "xena", "yoga") %}
+            pass_hwveb_ports_to_os_vif_plugin: false
+{%- endif %}
           os_vif_contrail_vrouter:
             vrouter_port: {{ vrouter_port }}
 {%- else %}
