Increase number of octavia proccesses to 5
Related-Prod: PRODX-39094
Change-Id: I9856f605d8bd41a324a75f2a0a388770b65fa1c0

--- a/openstack_controller/templates/size/single.yaml
+++ b/openstack_controller/templates/size/single.yaml
@@ -308,6 +308,9 @@ services:
                 health_manager:
                   max_unavailable: 10%
         conf:
+          software:
+            apache2:
+              processes: 5
           octavia:
             database:
               max_pool_size: 10
