Increase read-timeout for octavia ingress to 120
With ovn case octavia uses driver agent setup to configure
lbs, the driver agent setup is more synchronous as api uses
socket communication with agent/worker.

Related-Prod: PRODX-39094
Change-Id: I2ab622121e297263466694904b346850a99918ba

--- a/openstack_controller/templates/services/load-balancer.yaml
+++ b/openstack_controller/templates/services/load-balancer.yaml
@@ -250,6 +250,12 @@ spec:
         octavia_driver_agent: true
 {%- endif %}
       network:
+        api:
+          ingress:
+            annotations:
+              # NOTE(vsaienko): octavia driver agents are synchronous
+              # they may require a bit more time to setup lb
+              nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
       {%- if ovn_enabled %}
         backend:
           - ovn
