--- a/tests/fixtures/render_service_template/output/load-balancer/ussuri_ceph_local_non_dvr_local_proxy.yaml
+++ b/tests/fixtures/render_service_template/output/load-balancer/ussuri_ceph_local_non_dvr_local_proxy.yaml
@@ -4,6 +4,10 @@ spec:
     name: openstack-octavia
     values:
       network:
+        api:
+          ingress:
+            annotations:
+              nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
         proxy:
           enabled: true
           env_vars:
