--- a/tests/fixtures/render_service_template/output/load-balancer/victoria_ceph_local_ovn_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/load-balancer/victoria_ceph_local_ovn_non_dvr.yaml
@@ -4,6 +4,10 @@ spec:
     name: openstack-octavia
     values:
       network:
+        api:
+          ingress:
+            annotations:
+              nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
         backend:
         - ovn
         proxy:
