--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ console_scripts =
     osctl-move-sensitive-data = openstack_controller.cli.move_secret_fields:main
     osctl-convert-credential-secrets = openstack_controller.cli.convert_credential_secrets:main
     osctl-check-osdplsecrets = openstack_controller.cli.check_osdplsecret:main
+    osctl-ovs-ovn-migrate = openstack_controller.cli.ovs_ovn_migration:main
 wsgi_scripts =
     admission_controller = openstack_controller.admission.wsgi:main
     osctl-exporter = openstack_controller.exporter.exporter:main
