--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -36,7 +36,8 @@ properties:
       - wallaby # not supported, only for migration
       - xena # not supported, only for migration
       - yoga # LTS version
-      - antelope # not supported
+      - antelope # LTS version
+      - caracal # not supported, technical release
       - master # not supported, only for example
   preset:
     description: Preset of features to deploy
