--- a/openstack_controller/templates/services/metric.yaml
+++ b/openstack_controller/templates/services/metric.yaml
@@ -104,7 +104,7 @@ spec:
 {%- else %}
             debug: false
 {%- endif %}
-{%- if spec.openstack_version in ("antelope",) %}
+{%- if spec.openstack_version in ("antelope", "caracal",) %}
             coordination_url: {{ get_etcd3_endpoint(spec.openstack_version, 'etcd3gw') }}
 {%- else %}
             #There are some problems with etcd3+http driver so we shouldn't use it
