Drop removed scheduler filster AvailabilityZoneFilter
Its dropped in bobcat release.

Related-Prod: PRODX-3456
Change-Id: I8af9292f339a8d7a983c9a0dda7b5aa204d23e7e

--- a/openstack_controller/templates/preset/compute-tf.yaml
+++ b/openstack_controller/templates/preset/compute-tf.yaml
@@ -146,7 +146,9 @@ services:
               # - AggregateNumInstancesFilter
               - AggregateTypeAffinityFilter
               # - AllHostsFilter
+              {%- if openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'xena', 'wallaby', 'zed', 'antelope'] %}
               - AvailabilityZoneFilter
+              {%- endif %}
               - ComputeFilter
               - ComputeCapabilitiesFilter
               - DifferentHostFilter
