--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -133,7 +133,9 @@ services:
               # - AggregateNumInstancesFilter
               - AggregateTypeAffinityFilter
               # - AllHostsFilter
+              {%- if openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'xena', 'wallaby', 'zed', 'antelope'] %}
               - AvailabilityZoneFilter
+              {%- endif %}
               - ComputeFilter
               - ComputeCapabilitiesFilter
               - DifferentHostFilter
