--- a/tests/fixtures/render_service_template/input/ussuri_ceph_lvm_non_dvr_node_specific/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/ussuri_ceph_lvm_non_dvr_node_specific/context_spec.yaml
@@ -15,6 +15,11 @@ nodes:
         nova:
           images:
             backend: local
+    compute::qcow2:
+      features:
+        nova:
+          images:
+            backend: qcow2
     compute::raw:
       features:
         nova:
