Enable portprober by default
The default for portprober enablement is choosed as enabled
* when openstack version >= antelope and
* when is ovs environment and
* when cloudprober is enabled

The osdpl spec.features.neutron.extensions.portprober still takes
precedence over default value.

Related-Prod: PRODX-3456
Change-Id: I9cfed338bf7be7474737d0c89aab4f035890b5b5

--- a/openstack_controller/templates/services/networking.yaml
+++ b/openstack_controller/templates/services/networking.yaml
@@ -17,7 +17,6 @@
 {%- set ipsec = spec.features.neutron.get('ipsec', {'enabled': False}) %}
 {%- set vpnaas = spec.features.neutron.get("extensions", {}).get("vpnaas", {"enabled": False}) %}
 {%- set dynamic_routing = spec.features.neutron.get("extensions", {}).get("dynamic_routing", {"enabled": False}) %}
-{%- set portprober = spec.features.neutron.get("extensions", {}).get("portprober", {"enabled": False}) %}
 {%- set service_providers = [] %}
 {%- set l3_agent_extensions = ["fip_qos", "gateway_ip_qos"] %}
 {%- set notification_topics = ['notifications'] %}
@@ -33,13 +32,16 @@
     {%- set service_plugins = ['ovn-router', 'metering', 'qos'] %}
   {%- endif %}
 {%- endif %}
+{%- set portprober_enabled_default = "cloudprober" in spec.features.services and spec.openstack_version in openstack_versions[openstack_versions.index('antelope'):] and not tungstenfabric_enabled and not ovn_enabled %}
+{%- set portprober_enabled = spec.features.neutron.get("extensions", {}).get("portprober", {}).get("enabled", portprober_enabled_default) %}
+
 {%- do service_plugins.append('bgpvpn') if bgpvpn.enabled %}
 {%- do service_providers.append("BGPVPN:BaGPipe:networking_bgpvpn.neutron.services.service_drivers.bagpipe.bagpipe_v2.BaGPipeBGPVPNDriver:default") if bgpvpn.enabled %}
 {%- do service_plugins.append('vpnaas') if vpnaas.enabled %}
 {%- do service_providers.append("VPN:strongswan:neutron_vpnaas.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default") if vpnaas.enabled %}
 {%- do service_plugins.append('bgp') if dynamic_routing.enabled %}
 {%- do l3_agent_extensions.append("vpnaas") if  vpnaas.enabled %}
-{%- do service_plugins.append('portprober') if portprober.enabled %}
+{%- do service_plugins.append('portprober') if portprober_enabled %}
 {%- do notification_topics.append('stacklight_notifications') if stacklight_enabled %}
 {%- set external_notifications_enabled = spec.get('features', {}).get('messaging', {}).get('notifications', {}).get('external', {}).get('enabled', False) %}
 {%- if external_notifications_enabled %}
@@ -743,7 +745,7 @@ spec:
         daemonset_dr_agent: true
       {%- endif %}
         network_policy: {{ spec.features.network_policies.enabled }}
-      {%- if portprober.enabled %}
+      {%- if portprober_enabled %}
         daemonset_portprober_agent: true
       {%- endif %}
       network:
