Add DRB Controller service
Simple controller that collects metrics,
and makes and executes decisions based
upon those metrics.

Related-Prod: PRODX-41151
Change-Id: If92dbb4ce0391da0dfc1a608475bc6fb1751c403

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -690,6 +690,7 @@ properties:
             - metric
             - instance-ha
             - shared-file-system
+            - dynamic-resource-balancer
       cloudprober:
         type: object
         additionalProperties: false
