--- a/openstack_controller/templates/antelope/artifacts.yaml
+++ b/openstack_controller/templates/antelope/artifacts.yaml
@@ -22,6 +22,7 @@ designate_mdns: '{{ images_base_url }}/openstack/designate:antelope-jammy-202404
 designate_producer: '{{ images_base_url }}/openstack/designate:antelope-jammy-20240422060025'
 designate_sink: '{{ images_base_url }}/openstack/designate:antelope-jammy-20240422060025'
 designate_worker: '{{ images_base_url }}/openstack/designate:antelope-jammy-20240422060025'
+drb_controller: '{{ images_base_url }}/openstack/extra/drb-controller:0.1.0-20240413171732'
 glance_api: '{{ images_base_url }}/openstack/glance:antelope-jammy-20240422060025'
 glance_db_sync: '{{ images_base_url }}/openstack/glance:antelope-jammy-20240422060025'
 glance_db_expand: '{{ images_base_url }}/openstack/glance:antelope-jammy-20240422060025'
