--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -56,6 +56,7 @@ images:
   designate_worker: designate-worker:latest
   designate_pool_manage: designate-pool-manage:latest
   designate_pool_manage_hash: designate-pool-manage-hash:latest
+  drb_controller: drb-controller:latest
   entrypoint: entrypoint:latest
   error_pages: error-pages:latest
   etcd: etcd:latest
