--- a/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr/context_spec.yaml
@@ -109,6 +109,7 @@ features:
   - redis
   - instance-ha
   - shared-file-system
+  - dynamic-resource-balancer
   ssl:
     public_endpoints:
       api_cert: "TEST CRT"
