--- a/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr/context_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr/context_template_args.yaml
@@ -40,6 +40,11 @@ cloudprober:
     cloudprober:
       password: QXH50EtBVsiCptehSf4l55Y1R3QdGFv8xc
       username: osctlQECh8
+dynamic-resource-balancer:
+  keystone_creds:
+    drb_controller:
+      password: iCptehQXf4l55GFv8xc50EtBVY1HSR3Qds
+      username: osctlKiD31
 compute:
   ceph:
     nova:
