--- a/openstack_controller/templates/yoga/artifacts.yaml
+++ b/openstack_controller/templates/yoga/artifacts.yaml
@@ -233,3 +233,4 @@ ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy
 cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240412114317'
 neutron_portprober_agent: '{{ images_base_url }}/openstack/neutron:yoga-jammy-20240412114317'
 cirros_raw_checksum: f756328a32fad36f7239223b030caab5
+redis-operator: '{{ images_base_url }}/openstack/extra/redis-operator:v1.2.4-20231107105540'
