[horizon] Change cache backend for caracal
Use PyMemcacheCache as MemcachedCache is dropped from Django.

Related-Prod: PRODX-3456
Change-Id: I769d4cb65e51ee7e8da8906b9007de1d078d102b

--- a/openstack_controller/templates/services/dashboard.yaml
+++ b/openstack_controller/templates/services/dashboard.yaml
@@ -315,3 +315,7 @@ spec:
 {%- endif %}
               tungstenfabric:
                 enabled: {{ neutron_backend == 'tungstenfabric' }}
+{%- if spec.openstack_version not in ['queens', 'rocky', 'stein', 'train', 'ussuri', 'victoria', 'wallaby', 'xena', 'yoga', 'zed', 'antelope'] %}
+              cache:
+                backend: "django.core.cache.backends.memcached.PyMemcacheCache"
+{%- endif %}
