--- a/openstack_controller/templates/stein/artifacts.yaml
+++ b/openstack_controller/templates/stein/artifacts.yaml
@@ -223,3 +223,4 @@ ingress_init_config: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy
 cinder_wait_for_backends: '{{ images_base_url }}/openstack/openstack-tools:yoga-jammy-20240408060019'
 neutron_portprober_agent: '{{ images_base_url }}/openstack/neutron:stein-bionic-20230227093206'
 neutron_ovn_db_sync_migrate: '{{ images_base_url }}/openstack/neutron:stein-bionic-20230227093206'
+redis-operator: '{{ images_base_url }}/openstack/extra/redis-operator:v1.2.4-20231107105540'
