[cis] Fix 5.2.5 for cache precaching images
Set allowPrivilegeEscalation for containers explicitly.

Related-Prod: PRODX-41875
Change-Id: Ibf2f82d39dce014a1d7c7483c38448d35029739c

--- a/openstack_controller/templates/native/cache.yaml
+++ b/openstack_controller/templates/native/cache.yaml
@@ -39,6 +39,7 @@ spec:
 {# not all images support "/bin/sleep infinity" #}
         command: ["/bin/sleep", "86400000"]
         securityContext:
+          allowPrivilegeEscalation: false
           capabilities:
             drop:
             - ALL
